--- a/7월 1주차/7월 6일.MD
+++ b/7월 1주차/7월 6일.MD
@@ -28,3 +28,79 @@ Log4j를 활용한 Log기록처리 구현
 >>> CRUD구현 로직 활용 상기내용 포함
 >> 평가방식 : 완성 코드 제출 및 개별 시연평가
 ```
+
+
+## log4j.xml 활용
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- 
+	1. 태그종류
+		1) Appender
+			- 클래스 종류
+				. ConsoleAppender		: 콘솔에 출력
+				. FileAppender			: 파일에 저장
+				. RollingFileAppender	: 파일크기가 일정기준을 넘으면 백업후 신규파일로 기록	
+				. DailyRollingAppender	: 설정한 시간단위(날짜)로 새파일을 만들어서 기록
+		2) Layout
+			- PatternLayout클래스
+				. %p	: debug, info, error, fatal등 레벨이름 출력
+				. %m	: 로그 메시지
+				. %d	: 로깅 이벤트 발생시각
+				. %F	: 로깅 발생 프로그램파일 이름
+				. %I	: 로깅이 발생한 caller의 정보출력
+				. %M	: 로깅이 발생한 caller의 라인의 번호
+				. %c	: 로깅 메시지앞에 전체 패키지 이름이나 전체 파일이름
+				...
+				
+		3) Logger
+			- 로그레벨 단계
+				. FATAL	: 시스템차원에서 심각한 문제가 발생해서 애플리케이션이 작동불가
+				. ERROR	: 실행중에 문제가 발생한 상태
+				. WARN	: 향후에 시스템 오류의 원인이 될 수도 있는 경고
+				. INFO	: 애플리케이션 운영과 관련된 정보메시지
+				. DEBUG	: 개발시 디버깅 용도로 사용한 메시지
+				. TRACE	: DEBUG레벨보다 상세한 로깅정보를 출력
+			- 낮은 단계를 지정하면 그 이상의 단계를 포함하여 출력된다
+
+ -->
+<!DOCTYPE log4j:configuration PUBLIC "-//APACHE//DTD LOG4J 1.2//EN" "log4j.dtd">
+<log4j:configuration xmlns:log4j="http://jakarta.apache.org/log4j/">
+
+	<!-- Appenders : 어디에 출력할 것이냐 -->
+	<appender name="console" class="org.apache.log4j.ConsoleAppender">
+		<param name="Target" value="System.out" />
+		
+		<!-- 어떻게 출력할 것이냐 -->
+		<layout class="org.apache.log4j.PatternLayout">
+			<param name="ConversionPattern" value="%-5p: %c - %m%n" />
+		</layout>
+	</appender>
+	
+
+	<!-- Loggers : 무엇을 출려갈 것인가? 로그레벨 -->
+	<logger name="org.springframework.web">
+		<level value="info" />
+	</logger>
+
+	<!-- Root Loger : 모든 Logger의 부모, 자식들이 변경하지 않으면 Root Logger를 따른다. -->
+	<root>
+		<priority value="warn" />	<!-- 로그레벨 -->
+		<appender-ref ref="console" />
+	</root>
+	
+</log4j:configuration>
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
