--- a/7월 1주차/7월 6일.MD
+++ b/7월 1주차/7월 6일.MD
@@ -93,6 +93,48 @@ Log4j를 활용한 Log기록처리 구현
 ```
 
 
+### LogFile 나오게하기
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE log4j:configuration PUBLIC "-//APACHE//DTD LOG4J 1.2//EN" "log4j.dtd">
+<log4j:configuration xmlns:log4j="http://jakarta.apache.org/log4j/">
+
+	<!-- Appenders : 어디에 출력할 것이냐 -->
+	<appender name="console" class="org.apache.log4j.ConsoleAppender">
+		<param name="Target" value="System.out" />
+		
+		<!-- 어떻게 출력할 것이냐 -->
+		<layout class="org.apache.log4j.PatternLayout">
+			<param name="ConversionPattern" value="%-5p: %c - %m%n" />
+		</layout>
+	</appender>
+	
+	<appender name="dailyFileAppender" class="org.apache.log4j.DailyRollingFileAppender">
+		<param name="File" value="C:\\Users\\1\\Desktop\\Directory-Hoony\\spring\\logfile\\output.log"></param> <!-- 슬래시 1개는 인식 못함 -->
+		<param name="Append" value="true"/>
+		
+		<layout class="org.apache.log4j.PatternLayout">
+			<param name="DatePattern" value="yyyy-MM-dd"/>
+			<param name="ConversionPattern" value="[%d{hh:mm:ss]] [%-5p](%F:%L)-%m%n "/>
+													<!-- %d: 로깅시각, %F: 프로그램이름, %L: caller의 라인수, %m: 메시지 -->
+		</layout>
+	</appender>
+
+	<!-- Loggers : 무엇을 출려갈 것인가? 로그레벨 -->
+	<logger name="org.springframework.web">
+		<level value="info" />
+	</logger>
+
+	<!-- Root Loger : 모든 Logger의 부모, 자식들이 변경하지 않으면 Root Logger를 따른다. -->
+	<root>
+		<priority value="info" />	<!-- 로그레벨 -->
+		<appender-ref ref="dailyFileAppender"/>
+		<appender-ref ref="console" />
+	</root>
+	
+</log4j:configuration>
+
+```
 
 
 
