--- a/7월 1주차/7월 6일.MD
+++ b/7월 1주차/7월 6일.MD
@@ -136,7 +136,15 @@ Log4j를 활용한 Log기록처리 구현
 
 ```
 
+- BoardController에 추가
+```java
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+	// 로그코드 추가
+	private static final Logger logger =
+			LoggerFactory.getLogger(BoardController.class);
+```
 
 
 
