--- a/7월 1주차/7월 6일.MD
+++ b/7월 1주차/7월 6일.MD
@@ -143,7 +143,15 @@ import org.slf4j.LoggerFactory;
 
 	// 로그코드 추가
 	private static final Logger logger =
-			LoggerFactory.getLogger(BoardController.class);
+		LoggerFactory.getLogger(BoardController.class);
+
+// getBoardList에 추가
+ HttpServletRequest request
+
+	String requestPath = request.getServletPath();
+	logger.info("info레벨: 요청경로= " + requestPath);
+	logger.debug("debug레벨: 요청경로= " + requestPath);
+
 ```
 
 
