--- a/7월 1주차/7월 6일.MD
+++ b/7월 1주차/7월 6일.MD
@@ -121,8 +121,8 @@ Log4j를 활용한 Log기록처리 구현
 	</appender>
 
 	<!-- Loggers : 무엇을 출려갈 것인가? 로그레벨 -->
-	<logger name="org.springframework.web">
-		<level value="info" />
+	<logger name="com.mycompany.view">  <!-- view에 넣어야함 BoardController는 view에 있음 -->
+		<level value="debug" />
 	</logger>
 
 	<!-- Root Loger : 모든 Logger의 부모, 자식들이 변경하지 않으면 Root Logger를 따른다. -->
