--- a/7월 1주차/7월 7일.MD
+++ b/7월 1주차/7월 7일.MD
@@ -1,16 +1,14 @@
 # Review
 
-### ORM(Object Relation Mapping)프레임워크(JPA)
+### Log4j.xml 사용
 
 
 
 -----------------------------------------------------
 
 ## 학습목표
-- 실습
-```
-Log4j를 활용한 Log기록처리 구현
-```
+- 프레임워크 프로그래밍 정기평가
+- 팀 프로젝트 수행
 
 - 스프링 정기평가준비 7/6(목) >> 7/7(금) 1~2교시
 
