--- a/7월 2주차/7월 10일.MD
+++ b/7월 2주차/7월 10일.MD
@@ -1,15 +1,6 @@
 # Review
 
-### Log4j.xml 사용
-
-
-
------------------------------------------------------
-
-## 학습목표
-- 프레임워크 프로그래밍 정기평가
-- 팀 프로젝트 수행
-
+### 프레임워크 시험
 - 스프링 정기평가준비 7/6(목) >> 7/7(금) 1~2교시
 
 - 개인 포트폴리오 中 CRUD로직부분 활용
@@ -26,3 +17,13 @@
 >>> CRUD구현 로직 활용 상기내용 포함
 >> 평가방식 : 완성 코드 제출 및 개별 시연평가
 ```
+
+
+-----------------------------------------------------
+
+## 학습목표
+Android Studio 개발환경 설치
+- https://developer.android.com/studio/archive.html
+
+Kotlin 문법 학습
+- https://www.jetbrains.com/toolbox-app/
