--- a/7월 2주차/7월 10일.MD
+++ b/7월 2주차/7월 10일.MD
@@ -27,3 +27,22 @@ Android Studio 개발환경 설치
 
 Kotlin 문법 학습
 - https://www.jetbrains.com/toolbox-app/
+
+
+### 안드로이드 설치
+```
+https://developer.android.com/studio/archive.html
+(English) 버전 바꾸
+여기서 제일 아래 동의하기
+
+Android Studio Flamingo | 2022.2.1 RC 1 March 27, 2023
+Windows (64-bit): android-studio-2022.2.1.17-windows.exe (1.0 GB) (이거 다운)
+
+https://developer.android.com/studio/archive.html
+여기서 바로 다운로드
+
+안드부터 더블클릭 설치 쭉쭉 ( 그대로 경로도 보기 )
+
+```
+
+
