--- a/7월 2주차/7월 10일.MD
+++ b/7월 2주차/7월 10일.MD
@@ -43,6 +43,33 @@ https://developer.android.com/studio/archive.html
 
 안드부터 더블클릭 설치 쭉쭉 ( 그대로 경로도 보기 )
 
+
+
+다 다운받앗으면 키키
+
+Customize - All settings
+
+Editor auto import 
+add unam~ 선택 ( 자바 코틀린 둘다 )
+Optimize~ 선택 ( 자바 코틀린 둘다 )
+
+Appearance & behavior - Appearance - SDK Platforms
+API Level - 33, 32, 31, 30, 29
+Show pacakage Details - SDK Platform 34 체크(되어있을듯)
+
+SDK Playforms
+Android SDK Playform 34, 33 ~
+Google APIs Intel x86_64 Atom System image, Google Play intel x86_64 Atom System Image
+31 버전부터는 이거 있음 intel x86_64 Atom System Image
+
+
+SDK Tools
+Android Emulator
+Android Emulator hypervisor driver (installer)
+Android SDK Playform-Tools
+
+
+
 ```
 
 
