--- a/7월 2주차/7월 10일.MD
+++ b/7월 2주차/7월 10일.MD
@@ -29,6 +29,29 @@ Kotlin 문법 학습
 - https://www.jetbrains.com/toolbox-app/
 
 
+### 이론
+```
+    변수 선언
+        . 초기화 선언
+        . 선언후에 동적으로 초기화
+
+        var 변수 : 데이터타입 = 값
+
+    초기화 미루기
+
+        . 전역변수는 초기화 하여야 한다.
+        . 그러나 동적으로 초기화 하고싶을 경우는 아래와 같이 한다.
+
+            1) lateinit var num:int
+            2) val num1:Int by lazy{
+                        ~~~~~
+                        ~~~~~
+                        50
+                }
+
+```
+
+
 ### 안드로이드 설치
 ```
 https://developer.android.com/studio/archive.html
