--- a/7월 2주차/7월 10일.MD
+++ b/7월 2주차/7월 10일.MD
@@ -49,6 +49,32 @@ Kotlin 문법 학습
                         50
                 }
 
+   lateinit var num5:Int   // lateinit붙이면 되지만, 숫자관련 데이터 타입은 안된다.
+
+    . 코딩 컨벤션
+        - 클래스 네이밍 컨벤션(명명규칙) : 케멜 케이스 (StudentScore)
+        - 함수명 / 변수명 : 첫글자만 소문자로 하는 케멜 케이스 (studentScore)
+        - 상수명 : 스네이크 케이스 : STUDENT_KOR_SCORE
+        - 들여쓰기 :
+
+    . 데이터 타입
+        - 숫자형
+            . Double
+            . Float
+            ---------
+            . Long
+            . Int
+            . Short
+            . Byte
+            --------
+
+        - 문자형
+            . Char      ' '
+            . String    " "
+
+        - 불린형
+            . Boolean   true/false
+
 ```
 
 
