--- a/7월 2주차/7월 10일.MD
+++ b/7월 2주차/7월 10일.MD
@@ -121,3 +121,38 @@ Android SDK Playform-Tools
 ```
 
 
+### in 1...10 코틀린문법
+```kotlin
+/*
+    When
+        : switch문과 유사하다.
+
+ */
+
+    fun main(){
+
+        println("월을 입력해 주세요.")
+        var sc = Scanner(System.`in`)
+        var month = sc.nextInt()
+
+        when(month){
+
+            3,4,5 -> {
+                println("${month}월은 봄입니다.")
+            }
+            6,7,8 -> {
+                println("${month}월은 열입니다.")
+            }
+            in 9..10 -> {
+                println("${month}는 갈입니다.")
+            }
+            !in 1..12 ->{
+                println("${month}월은 이상한 계절입니다.")
+            }
+            else -> {
+                println("${month}월은 결 입니다.")
+            }
+        }
+
+    }
+```
