--- a/7월 2주차/7월 11일.MD
+++ b/7월 2주차/7월 11일.MD
@@ -1,29 +1,13 @@
 # Review
 
-### 프레임워크 시험
-- 스프링 정기평가준비 7/6(목) >> 7/7(금) 1~2교시
-
-- 개인 포트폴리오 中 CRUD로직부분 활용
-```
- 개인 포폴
-  - IoC - vo,DAO / Controller
-  - AOP - Before, After 본인 이름 출력
-  - 트랜잭션 - primary key insert 2회(중복) 처리시 적용
-  - 예외처리 - XML활용 구현
-  - 파일 업로드 - 버튼 추가 구현
-  - 다국어 - view 페이지 메뉴
-  - Mybatis 적용
-
->>> CRUD구현 로직 활용 상기내용 포함
->> 평가방식 : 완성 코드 제출 및 개별 시연평가
-```
-
-
------------------------------------------------------
-
-## 학습목표
 Android Studio 개발환경 설치
 - https://developer.android.com/studio/archive.html
 
 Kotlin 문법 학습
 - https://www.jetbrains.com/toolbox-app/
+
+
+-----------------------------------------------------
+
+## 학습목표
+- 코틀린 문법
