--- a/7월 2주차/7월 11일.MD
+++ b/7월 2주차/7월 11일.MD
@@ -10,4 +10,26 @@ Kotlin 문법 학습
 -----------------------------------------------------
 
 ## 학습목표
-- 코틀린 문법
+코틀린 문법
+- Array
+
+
+### 이론
+```
+    배열
+        - 고정형
+        - 기본데이터 타입에 따른 생성자가 있다.
+            . IntArray(10)
+            . LongArray(10)
+            . DoubleArray(10)
+                    ~
+
+            . StringArray(10, "{item->""})
+            . arrayOf(값,,,)
+        - 입력
+            . 배열명[인덱스] = 값
+            . 배열명.set(인덱스) = 값
+        - 읽어오기
+            . 배열명[인덱스]
+            . 배열명.get(인덱스)
+```
