--- a/7월 2주차/7월 11일.MD
+++ b/7월 2주차/7월 11일.MD
@@ -32,4 +32,71 @@ Kotlin 문법 학습
         - 읽어오기
             . 배열명[인덱스]
             . 배열명.get(인덱스)
+
+    . 데이터 타입의 두 분류
+        - mutable   :   변할수 있는 데이터 타입
+        - immutable :   변할수 없는 데이터 타입 - 코틀린은 이것이 기본
+
+        >> 앞에 mutable~~~ 붙여서 사용
+            List        mutableListOf()
+
+        . List
+            - mutableListOf()
+                . 추가 :  add(값)
+                . 읽기 :  get(인덱스)
+                . 수정 :  set(인덱스, 값)
+                . 삭제 :  remove(인덱스)
+                . 크기 :  size -----> list.size
+            - 선언만 해놓고 나중에 채워야 하는 경우
+                . mutableListOf<데이터타입> ()
+
+    Set(셋)
+        - 중복을 허용하지 않는다.
+        - 순서가 없다
+
+        - 생성 : mutableSetOf<String>()
+        - 저장 : set.add(값)
+        - 삭제 : set.remove("값")
+
+    Map
+        . 키와 값으로 저장
+        . 순서가 없다
+        . 생성 : mutableMapOf<String>()
+        . 추가 : put(키) = 값
+        . 읽기 : get(키)
+        . 삭제 : remove(키)
+
+    - 변경되지 않는 데이터 타입을 사용하고 싶다면... immutable을 사용
+    - set(), remove(), add() >> 없다
+    - 고정된 값들을 저장해 놓고 활용할 때 사용
+
+반복문
+    for
+    while
+    do while
+    + break, continue
+
+
+```
+
+
+### 예제
+```kotlin
+    // 구구단을 출력하기
+    // 홀수단만
+    for (i in 1..10 step 2){
+        for(j in 1..9){
+            println("${i} * ${j} = ${i*j}")
+        }
+    }
+
+    println("--------------------------------------------")
+
+    // 구구단을 출력하기
+    // 홀수단에 짝수 수만 출력하기
+    for (i in 1..10 step 2){
+        for(j in 2..10 step 2){
+            println("${i} * ${j} = ${i*j}")
+        }
+    }
 ```
