--- a/7월 2주차/7월 11일.MD
+++ b/7월 2주차/7월 11일.MD
@@ -111,3 +111,29 @@ Kotlin 문법 학습
         }
     }
 ```
+
+### 부모 자식
+```kotlin
+open class Parent2(name: String){
+    var name = "홍길동"
+    init {
+        this.name = name
+        println("부모입니다.")
+    }
+
+    fun f(){
+        println("부모 메서드야")
+    }
+}
+
+class Son2 : Parent2{
+    var name2 = "홍준호"
+    init {
+        println("${name2}의 부모님은 ${name}님 이십니다.")
+    }
+
+    constructor(name: String):super(name){
+        println("${super.name}님의 자식은 ${name2} 입니다.")
+    }
+}
+```
