--- a/7월 2주차/7월 12일.MD
+++ b/7월 2주차/7월 12일.MD
@@ -5,3 +5,39 @@
 -----------------------------------------------------
 
 ## 학습목표
+
+코틀린 문법
+
+### Data class
+- mutableListOf
+```kotlin
+data class Goods(val name:String, var price:Int){
+
+    fun sell(){
+        println("제품명: ${name}, 가격: ${price}")
+    }
+
+
+}
+
+// 일반클래스
+class Student(var name: String, var score:Int){
+    fun printScore(){
+        println("학생명: ${name}, 가격:${score}")
+    }
+
+}
+
+fun main() {
+
+    var goods1 = Goods("새우깡",1000)
+    var goods2 = Goods("새우깡",2000)
+    var goods3 = Goods("새우깡",3000)
+
+    var goodsArr = mutableListOf(goods1,goods2,goods3)
+
+    for(goods in goodsArr){
+        println("데이너클래스 반환값: ${goods.toString()}, 제품명:${goods.name}, 가격:${goods.price}")
+    }
+}
+```
