--- a/7월 2주차/7월 12일.MD
+++ b/7월 2주차/7월 12일.MD
@@ -41,3 +41,84 @@ fun main() {
     }
 }
 ```
+
+### 추상화 사용
+```kotlin
+// 1. 패키지
+package com.company.myapp
+
+// 2. 추상화
+abstract class Design{
+    abstract fun drawTEXT()
+    abstract fun draw()
+
+    fun showWindow(){
+        println("일부는 구현할 수 있습니다.")
+    }
+}
+
+// 3. 구현
+class Implements:Design(){
+    override fun draw() {
+        println("draw추상메서드를 구현합니다.")
+    }
+
+    override fun drawTEXT() {
+        println("drawText추상메서드를 구현합니다.")
+    }
+
+}
+
+fun main() {
+    Implements().draw()
+    Implements().drawTEXT()
+    Implements().showWindow()
+}
+
+
+
+```
+
+### 추상화 구현
+```kotlin
+package com.company.myapp
+
+interface Report{
+
+    abstract var name:String
+    abstract var age:Int
+
+    abstract fun say()
+    abstract fun walk()
+    abstract fun eat()
+
+}
+
+class A_Report(name:String, age:Int):Report{
+
+    override var name: String = ""
+    override var age: Int = 0
+
+    init {
+        this.name = name
+        this.age = age
+    }
+
+    override fun say() {
+        println("${name}님은 재밌게 말합니다.")
+    }
+
+    override fun walk() {
+    }
+
+    override fun eat() {
+    }
+
+}
+
+fun main() {
+    A_Report("홍길동",30).say()
+    A_Report("이강인", 27).walk()
+    A_Report("나운동",25).eat()
+}
+```
