--- a/7월 2주차/7월 12일.MD
+++ b/7월 2주차/7월 12일.MD
@@ -8,6 +8,15 @@
 
 코틀린 문법
 
+### 문법 기본
+```
+    접근제한자
+        . private           :   파일 안에서만 접근
+        . internal          :   같은 모듈
+        . protected         :   private + 상속된 자식
+        . public (디폴트)    :   제한없이
+```
+
 ### Data class
 - mutableListOf
 ```kotlin
