--- a/7월 2주차/7월 12일.MD
+++ b/7월 2주차/7월 12일.MD
@@ -10,13 +10,29 @@
 
 ## 코틀린의 모든 클래스는 View 클래스를 상속받는다.
 
-### 문법 기본
+### 문법 기본, Kotlin 기본
 ```
     접근제한자
         . private           :   파일 안에서만 접근
         . internal          :   같은 모듈
         . protected         :   private + 상속된 자식
         . public (디폴트)    :   제한없이
+
+    TextView
+        . 가장 기본이 되는 위젯
+        . 속성
+            - id : 식별자
+            - text : 문자열
+            - textColor : 글자색
+            - textStyle : 글자스타일 (중복)
+            - typeace : 폰트설정 (normal, sans,,,) 중복
+            - maxlines : 최대라인
+            - minlines : 최소라인
+            - lines : 보여지는 라인 수
+            - singlelines : 한줄처리
+            - ellipse?? : 줄임표시 - start, end
+
+        다국어
 ```
 
 ### Data class
