--- a/7월 2주차/7월 13일.MD
+++ b/7월 2주차/7월 13일.MD
@@ -14,3 +14,29 @@ TestView - Edit, Button , compoundButton
 ## 학습목표
 
 코틀린 문법
+
+- 자주사용하는 기본적인 xml 속성들 학습
+```
+    TextView
+        . 가장 기본이 되는 위젯
+        . 속성
+            - id : 식별자
+            - layout_width      위젯필수!
+            - layout_height     위젯필수!
+            - layout_gravity    <부모에서 위치지정>
+            - background        <배경색 - #000000>
+            - padding, layout_margin
+            - visibility        <보일것인지>
+            - enabled           <동작여부>
+            - clickable         <클릭이나 터치>
+            - rotation          <회전>
+            - text : 문자열
+            - textColor : 글자색
+            - textStyle : 글자스타일 (중복)
+            - typeace : 폰트설정 (normal, sans,,,) 중복
+            - maxlines : 최대라인
+            - minlines : 최소라인
+            - lines : 보여지는 라인 수
+            - singlelines : 한줄처리
+            - ellipse?? : 줄임표시 - start, end
+```
