--- a/7월 2주차/7월 13일.MD
+++ b/7월 2주차/7월 13일.MD
@@ -40,3 +40,9 @@ TestView - Edit, Button , compoundButton
             - singlelines : 한줄처리
             - ellipse?? : 줄임표시 - start, end
 ```
+
+# activity_main.xml
+- 이거 설정해두기
+``` kotlin
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+```
