--- a/7월 2주차/7월 13일.MD
+++ b/7월 2주차/7월 13일.MD
@@ -46,3 +46,111 @@ TestView - Edit, Button , compoundButton
 ``` kotlin
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
 ```
+
+### 예제
+```kotlin
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFEB3B"
+    android:padding="10dp"
+    tools:context=".MainActivity">
+
+    <RelativeLayout
+        android:background="#8FB6C8"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        >
+
+        <RelativeLayout
+            android:id="@+id/relativelayout"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:background="#064091"
+            >
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_alignEnd="@+id/ratingBar"
+                android:layout_alignRight="@+id/ratingBar"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/cat3"/>
+
+            <RatingBar
+                android:id="@+id/ratingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="45dp"
+                android:layout_marginRight="45dp"
+                android:progressBackgroundTint="#95ef05"/>
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_alignTop="@id/imageView2"
+                android:layout_marginEnd="74dp"
+                android:layout_marginRight="74dp"
+                android:layout_toStartOf="@+id/imageView2"
+                android:layout_toLeftOf="@+id/imageView2"
+                android:background="@drawable/pizza"/>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:shadowColor="#8899ff"
+            android:text="안드로이드를 시작합니다."
+            android:textAlignment="center"
+            android:textSize="30dp"
+            android:textStyle="bold|normal"/>
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="31dp"
+            android:text="Button"/>
+
+        <RadioButton
+            android:id="@+id/radioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/button"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="17dp"
+            android:text="RadioButton"/>
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="checkbox"
+            android:layout_below="@+id/radioButton"
+            android:layout_centerHorizontal="true"
+            />
+
+    </RelativeLayout>
+
+
+</RelativeLayout>
+```
+
