--- a/7월 2주차/7월 13일.MD
+++ b/7월 2주차/7월 13일.MD
@@ -154,3 +154,38 @@ TestView - Edit, Button , compoundButton
 </RelativeLayout>
 ```
 
+
+### LinearLayout 기본
+```kotlin
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"/>
+
+</LinearLayout>
+```
+
+### values - themes 에 넣어서 사용
+```xml
+    <style name="Theme.Myapp6K" parent="Base.Theme.Myapp6K" />
+
+    <style name="myButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="backgroundTint">#0B0BEA</item>
+        <item name="android:text">버튼</item>
+        <item name="android:textColor">#ffffff</item>
+
+    </style>
+```
+```kotlin
+        <Button
+            style="@style/myButton"
+            />
+```
