--- a/7월 2주차/7월 13일.MD
+++ b/7월 2주차/7월 13일.MD
@@ -156,12 +156,15 @@ TestView - Edit, Button , compoundButton
 
 
 ### LinearLayout 기본
+- 설정해둬야
 ```kotlin
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="50dp"
+    >
 
     <TextView
         android:layout_width="wrap_content"
