--- a/7월 2주차/7월 13일.MD
+++ b/7월 2주차/7월 13일.MD
@@ -14,8 +14,17 @@ TestView - Edit, Button , compoundButton
 ## 학습목표
 
 코틀린 문법
+```
+wrap_content : 폭과 높이가 글자가 꼭 들어갈 정도로 설정
+match_parent : 자신의 부모에 폭이나 높이를 맞추는 것
 
-- 자주사용하는 기본적인 xml 속성들 학습
+layout-gravity : 부모기준
+gravity : 나를 기준
+```
+
+
+
+### 자주사용하는 기본적인 xml 속성들 학습
 ```
     TextView
         . 가장 기본이 되는 위젯
