--- a/7월 2주차/7월 13일.MD
+++ b/7월 2주차/7월 13일.MD
@@ -201,3 +201,55 @@ gravity : 나를 기준
             style="@style/myButton"
             />
 ```
+
+
+### 로그인 페이지 아이디 비번 넣는 형식
+```xml
+       <EditText
+            android:id="@+id/tv1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:padding="10dp"/>
+
+        <EditText
+            android:id="@+id/tv2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:padding="10dp"/>
+```
+
+```kotlin
+package com.example.myapp11k
+
+import androidx.appcompat.app.AppCompatActivity
+import android.os.Bundle
+import android.view.View
+import android.widget.Button
+import android.widget.EditText
+
+class MainActivity : AppCompatActivity() {
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContentView(R.layout.activity_main)
+
+        val btn: Button
+        btn = findViewById(R.id.btn) as Button
+
+        btn.setOnClickListener(object : View.OnClickListener{
+            var tv1 = findViewById<View>(R.id.tv1) as EditText
+            var tv2 = findViewById<View>(R.id.tv2) as EditText
+
+            var str:String? = null
+            override fun onClick(view: View) {
+                str = tv1.text.toString()
+                tv2.setText(str)
+            }
+
+
+        })
+
+    }
+}
+```
