--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -16,4 +16,4 @@
 
 ### android:baselineAligned="true"
 - 이미지를 한줄로 정리 해줌
-
+<img src="https://t1.daumcdn.net/cfile/tistory/275F934B52A7ED8F0D?original"/>
