--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -16,3 +16,96 @@
 
 ### android:baselineAligned="true"
 - 이미지를 한줄로 정리 해줌
+
+
+### 입출력 해보기
+``` xml
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="이벤트 버튼"
+        android:textColor="#ffffff"
+        android:backgroundTint="#03A9F4"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center_horizontal"
+        />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:baselineAligned="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:text="입력"/>
+
+        <EditText
+            android:id="@+id/ed1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:padding="10dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="출력"
+            android:layout_margin="5dp"
+            android:padding="10dp"/>
+
+        <EditText
+            android:id="@+id/ed2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:padding="10dp"/>
+    </LinearLayout>
+</LinearLayout>
+```
+
+```kotlin
+package com.example.myapp12k;
+
+import android.os.Bundle;
+import android.view.View;
+import android.widget.Button;
+import android.widget.EditText;
+
+import androidx.appcompat.app.AppCompatActivity;
+
+public class JavaCode  extends AppCompatActivity {
+
+    protected void onCreate(Bundle savedInstanceState){
+        super.onCreate(savedInstanceState);
+        setContentView(R.layout.activity_main);
+
+        Button btn = (Button) findViewById(R.id.btn);
+        EditText ed1 = (EditText) findViewById(R.id.ed1);
+        EditText ed2 = (EditText) findViewById(R.id.ed2);
+
+        btn.setOnClickListener(new View.OnClickListener() {
+            String str;
+            @Override
+            public void onClick(View view) {
+                str = ed1.getText().toString();
+
+                ed2.setText(str);
+
+            }
+        });
+
+    }
+}
+
+```
