--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -19,6 +19,7 @@
 
 
 ### 입출력 해보기
+- null 말고 lateinit var 를 쓰는게 낫지않을까 싶다.
 ``` xml
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
