--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -13,6 +13,35 @@
 
 
 
+### 이론
+```
+    ? ) null 가능한 타입
+        val view:View? = null
+
+    ?. ) 앞에 변수가 null이면 null을 반환하고, null이 아니라면 함수실행
+        var str:String?
+        var name:String? = str?.toUpperCase()
+
+            if(str==null){ return null } else { name = str.toUpper() }
+
+    ?: ) null인 경우 디폴트값 지정
+       var name:String?
+       name?:"기본값"
+       if(str==null){ return name="기본값" } else { name = str.toUpper() }
+
+    as ) 형변환을 처리 ----- ClassCastException오류 발생
+
+        as?
+            - 타입이 맞으면 형변환. 아니면 null
+            - obj as? Person?: return false
+                Person obj = null
+                if(obj instanceOf Person){
+                    obj = (Person)obj
+                }else {
+                    return false
+                }
+```
+
 
 ### android:baselineAligned="true"
 - 이미지를 한줄로 정리 해줌
