--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -40,6 +40,13 @@
                 }else {
                     return false
                 }
+
+    is ) instacneOf
+            if(student instanceOf Person){}
+
+    !! ) 강제로 not null처리
+        - ? >>>> nullable 변수선언 >> 중간에 null이면 안될 경우
+
 ```
 
 
