--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -46,7 +46,11 @@
 
     !! ) 강제로 not null처리
         - ? >>>> nullable 변수선언 >> 중간에 null이면 안될 경우
-
+    fun changeBackground(){
+        if(checkBackground!!.isChecked){
+            layout!!.setBackgroundResource(R.drawable.cat3)
+        }
+    }
 ```
 
 
