--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -150,3 +150,57 @@ public class JavaCode  extends AppCompatActivity {
 }
 
 ```
+
+
+### checkbox
+```kotlin
+package com.example.myapp14k
+
+import androidx.appcompat.app.AppCompatActivity
+import android.os.Bundle
+import android.view.View
+import android.widget.Button
+import android.widget.CheckBox
+import android.widget.LinearLayout
+import android.widget.TextView
+
+class MainActivity : AppCompatActivity() {
+
+    var checkColor:CheckBox? = null
+    var checkBackground:CheckBox? = null
+    var tx:TextView? = null
+    var layout:LinearLayout? = null
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContentView(R.layout.activity_main)
+
+        checkColor = findViewById(R.id.checkColor) as CheckBox?
+        checkBackground = findViewById(R.id.checkbackground) as CheckBox?
+
+        tx = findViewById(R.id.lable) as TextView?
+        layout = findViewById(R.id.layout) as LinearLayout?
+
+        checkBackground!!.setOnClickListener(View.OnClickListener {
+            changeBackground() })
+
+    }
+
+    fun changeBackground(){
+        if(checkBackground!!.isChecked){
+            layout!!.setBackgroundResource(R.drawable.cat3)
+        }else{
+            layout!!.setBackgroundResource(0)
+        }
+    }
+
+    fun changeColor(view: View){
+        if(checkColor!!.isChecked){
+            tx!!.setTextColor(-0x300000)
+        }else{
+            tx!!.setTextColor(-0x123456)
+        }
+    }
+
+}
+```
