--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -204,3 +204,66 @@ class MainActivity : AppCompatActivity() {
 
 }
 ```
+
+### RadioGroup 이용
+- xml
+```xml
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="#6AD3E1">
+
+        <RadioButton
+            android:id="@+id/red"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="빨강"
+            android:onClick="mOnClick"/>
+```
+- kotlin
+``` kotlin
+package com.example.myapp15k
+
+import androidx.appcompat.app.AppCompatActivity
+import android.os.Bundle
+import android.view.View
+import android.widget.LinearLayout
+import android.widget.RadioButton
+import android.widget.RadioGroup
+
+class MainActivity : AppCompatActivity() {
+
+    var mLayout:LinearLayout? = null
+    var mRadioGroup:RadioGroup? = null
+
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContentView(R.layout.activity_main)
+
+        mLayout = findViewById(R.id.backColor) as LinearLayout?
+        mRadioGroup = findViewById(R.id.radioGroup) as RadioGroup?
+        val id = R.id.blue
+        colorChange(id)
+    }
+    fun mOnClick(v: View){
+        val rb = v as RadioButton
+        colorChange(rb.id)
+    }
+
+    fun colorChange(id:Int){
+
+        when(id){
+            R.id.red -> mLayout!!.setBackgroundColor(-0x100000)
+            R.id.blue -> mLayout!!.setBackgroundColor(-0x100000)
+            R.id.green -> mLayout!!.setBackgroundColor(0x100000)
+
+        }
+
+    }
+
+}
+```
