--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -10,7 +10,9 @@
 ## 학습목표
 
 코틀린 문법
-
+- button
+- checkbox
+- ImageView
 
 
 ### 이론
@@ -46,11 +48,27 @@
 
     !! ) 강제로 not null처리
         - ? >>>> nullable 변수선언 >> 중간에 null이면 안될 경우
+    // !! 이용
     fun changeBackground(){
         if(checkBackground!!.isChecked){
             layout!!.setBackgroundResource(R.drawable.cat3)
         }
     }
+
+
+    ImageView
+        - 파일명: 소문자의 영문, 첫글자는 무조건 알파벳
+        - background, src
+        - maxWidth, maxHeight : 이미지가 보일 최대크기
+                                지정하지 않으면 원본크기
+                                
+        - tint
+        - scableType
+            . fitXY         :
+            . centerCrop    :
+            . centerInside  :
+
+
 ```
 
 
