--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -64,10 +64,10 @@
                                 
         - tint
         - scableType
-            . fitXY         :
-            . centerCrop    :
-            . centerInside  :
-
+            . fitXY         : layout_width/height
+            . centerCrop    : 중앙을 중심으로 꽉차게 맞춤
+            . centerInside  : 중앙을 중심으로 지정된 크기에 맞춤
+            . adjustViewBounds : true/false, 종횡비 적용여부
 
 ```
 
