--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -13,6 +13,7 @@
 - button
 - checkbox
 - ImageView
+- ProgressBar
 
 
 ### 이론
@@ -282,6 +283,115 @@ class MainActivity : AppCompatActivity() {
         }
 
     }
+
+}
+```
+
+
+### ProgressBar
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center_horizontal|clip_horizontal"
+    >
+    
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        style="?android:progressBarStyleHorizontal"
+        android:layout_marginTop="20dp"
+        android:indeterminate="false"
+        android:progress="0"
+        android:background="#92D347"
+        android:progressTint="#E91E63"
+        android:progressBackgroundTint="#051677"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        >
+
+        <Button
+            android:id="@+id/minus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:onClick="selectBtn"
+            />
+        <Button
+            android:id="@+id/reset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="reset"
+            android:onClick="selectBtn"
+            />
+        <Button
+            android:id="@+id/plus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:onClick="selectBtn"
+            />
+
+    </LinearLayout>
+    
+</LinearLayout>
+```
+
+- kotlin
+```kotlin
+package com.example.myapp17k
+
+import androidx.appcompat.app.AppCompatActivity
+import android.os.Bundle
+import android.view.View
+import android.widget.Button
+import android.widget.ProgressBar
+import android.widget.Toast
+
+class MainActivity : AppCompatActivity() {
+
+    lateinit var pb:ProgressBar
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContentView(R.layout.activity_main)
+
+        pb = findViewById(R.id.progressbar) as ProgressBar
+        val inc = findViewById(R.id.plus) as Button
+        val dec = findViewById(R.id.minus) as Button
+        var reset = findViewById(R.id.reset) as Button
+    }
+
+    fun selectBtn(view:View){
+        f(view.id)
+    }
+
+    fun f(id:Int){
+        when(id){
+            R.id.plus -> if(pb!!.progress<=95){
+                pb!!.progress = pb!!.progress+5
+            }else if(pb!!.progress > 95){
+                Toast.makeText(this,"범위를 초과했습니다",Toast.LENGTH_LONG).show()
+            }
+
+            R.id.reset -> pb!!.progress=0
+            R.id.minus -> if(pb!!.progress >=5){
+                pb!!.progress=pb!!.progress-5
+            } else {
+                Toast.makeText(this,"더이상 감소 불가합니다.",Toast.LENGTH_LONG).show()
+            }
+
+        }
+    }
+
 
 }
 ```
