--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -14,6 +14,7 @@
 - checkbox
 - ImageView
 - ProgressBar
+- RatingBar
 
 
 ### 이론
@@ -395,3 +396,91 @@ class MainActivity : AppCompatActivity() {
 
 }
 ```
+
+### RatingBar
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
+
+    <RatingBar
+        android:id="@+id/ratingVote"
+        android:layout_marginTop="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:numStars="5"
+        android:stepSize="0.2"
+        style="@style/Widget.AppCompat.RatingBar"
+        />
+    
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        android:background="#FADF5D"
+        >
+
+        <Button
+            android:id="@+id/btnDec"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"/>
+        <Button
+            android:id="@+id/btnInc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"/>
+        <Button
+            android:id="@+id/btnResult"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="결과?"/>
+
+    </LinearLayout>
+
+</LinearLayout>
+```
+
+- kotlin
+```kotlin
+package com.example.myapp18k
+
+import android.annotation.SuppressLint
+import androidx.appcompat.app.AppCompatActivity
+import android.os.Bundle
+import android.view.View
+import android.widget.Button
+import android.widget.RatingBar
+import android.widget.Toast
+
+class MainActivity : AppCompatActivity() {
+
+
+    @SuppressLint("MissingInflatedId")
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContentView(R.layout.activity_main)
+
+        var rb:RatingBar? = null
+        rb = findViewById(R.id.ratingVote) as RatingBar?
+
+        val inc = findViewById(R.id.btnInc) as Button
+        val dec = findViewById(R.id.btnDec) as Button
+        val result = findViewById(R.id.btnResult) as Button
+
+        inc.setOnClickListener(View.OnClickListener { rb!!.incrementProgressBy(1) })
+        dec.setOnClickListener{
+            rb!!.incrementProgressBy(-1)
+        }
+        result.setOnClickListener{
+            Toast.makeText(applicationContext,"현재 값: "+rb!!.rating,Toast.LENGTH_LONG).show()
+        }
+    }
+}
+```
+
