--- a/7월 2주차/7월 14일.MD
+++ b/7월 2주차/7월 14일.MD
@@ -1,7 +1,13 @@
 # Review
 
 ### 코틀린 문법
+```
+wrap_content : 폭과 높이가 글자가 꼭 들어갈 정도로 설정
+match_parent : 자신의 부모에 폭이나 높이를 맞추는 것
 
+layout-gravity : 부모기준
+gravity : 나를 기준
+```
 
 
 
