--- a/7월 3주차/7월 17일.MD
+++ b/7월 3주차/7월 17일.MD
@@ -16,8 +16,12 @@ gravity : 나를 기준
 ## 학습목표
 
 코틀린 문법
-- button
-- checkbox
-- ImageView
-- ProgressBar
-- RatingBar
+- Resource(리소스)
+```
+string, color, style, array
+drawable, animation
+9Patch
+Layout
+html
+```
+
