--- a/7월 3주차/7월 17일.MD
+++ b/7월 3주차/7월 17일.MD
@@ -25,3 +25,28 @@ Layout
 html
 ```
 
+
+### String
+``` xml
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="리소스 활용 적용지정"
+        />
+```
+
+- MainActivity.kt
+``` kotlin
+        val s5:String = getString(R.string.sample5)
+        val name3 = TextUtils.htmlEncode("영어")
+        val sf3 = String.format(s5,name3,100,"점")
+        val tv5 = findViewById(R.id.textView5) as TextView
+        tv5.text = sf3
+```
+
+- strings.xml
+``` xml
+    <string name="sample5">이름: %s, 점수: %d %s</string>
+```
