--- a/7월 3주차/7월 17일.MD
+++ b/7월 3주차/7월 17일.MD
@@ -50,3 +50,88 @@ html
 ``` xml
     <string name="sample5">이름: %s, 점수: %d %s</string>
 ```
+
+### array
+- array.xml
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <string-array name="fruits">
+        <item>Apple</item>
+        <item>Orange</item>
+        <item>PineApple</item>
+        <item>Blueberry</item>
+        <item>Strawberry</item>
+        <item>Banana</item>
+        <item>Mango</item>
+    </string-array>
+    
+    
+</resources>
+```
+
+- kt
+```kotlin
+package com.example.myapp21k
+
+import android.content.res.Resources
+import android.content.res.TypedArray
+import androidx.appcompat.app.AppCompatActivity
+import android.os.Bundle
+import android.view.View
+import android.widget.Button
+import android.widget.EditText
+import android.widget.TextView
+
+class MainActivity : AppCompatActivity() {
+
+    var b1: Button? = null
+    var b2: Button? = null
+    var tv: TextView? = null
+    var arrIndex:EditText? = null
+    var F:TypedArray? = null
+    var index = 0
+    var s = ""
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContentView(R.layout.activity_main)
+        
+        // 리소스
+        val r:Resources = getResources()
+        F = r.obtainTypedArray(R.array.fruits)
+
+        val color = r.getColor(R.color.colorAccent)
+        val str = r.getString(R.string.app_name)
+
+        // View
+        b1 = findViewById(R.id.btn1) as Button?
+        tv = findViewById(R.id.tv) as TextView?
+        arrIndex = findViewById(R.id.arrIndex) as EditText?
+        b2 = findViewById(R.id.btn2) as Button?
+
+        b1!!.setOnClickListener(View.OnClickListener {
+            tv!!.setBackgroundColor(-0x314df)
+            index = 0
+            while(index < F!!.length()){
+
+                s += """
+                    ${F!!.getString(index)}
+                """.trimIndent()
+                index ++
+            }
+            tv!!.text = s
+        })
+
+        b2!!.setOnClickListener(View.OnClickListener {
+            tv!!.setBackgroundColor(-0xe00d4b)
+            index = arrIndex!!.text.toString().toInt()
+            if(index > F!!.length() || index <= 0){
+                arrIndex!!.isFocusable = true
+            }
+            tv!!.text = F!!.getText(index-1)
+        })
+
+    }
+}
+```
