--- a/7월 3주차/7월 17일.MD
+++ b/7월 3주차/7월 17일.MD
@@ -135,3 +135,122 @@ class MainActivity : AppCompatActivity() {
     }
 }
 ```
+
+### image 애니메이션
+- main.xml
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center_horizontal"
+        >
+
+        <Button
+            android:id="@+id/btnStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#00BCD4"
+            android:onClick="mOnClick"
+            android:text="시작"/>
+
+        <Button
+            android:id="@+id/btnStop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#1A7985"
+            android:layout_marginLeft="20dp"
+            android:onClick="mOnClick"
+            android:text="정지"/>
+
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageFrame"
+        android:layout_width="300dp"
+        android:layout_height="450dp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"/>
+    <EditText
+        android:id="@+id/ed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:hint="걷고 있습니다."
+        android:gravity="center_horizontal"/>
+
+</LinearLayout>
+```
+
+- mainActivity.kt
+```kotline
+package com.example.myapp22k
+
+import android.graphics.drawable.AnimationDrawable
+import androidx.appcompat.app.AppCompatActivity
+import android.os.Bundle
+import android.view.View
+import android.widget.EditText
+import android.widget.ImageView
+
+class MainActivity : AppCompatActivity() {
+
+    var mAnimation:AnimationDrawable? = null
+    var ed:EditText? = null
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContentView(R.layout.activity_main)
+
+        val img = findViewById(R.id.imageFrame) as ImageView
+        img.setBackgroundResource(R.drawable.frames)
+        mAnimation = img.background as AnimationDrawable
+
+        ed = findViewById(R.id.ed) as EditText
+    }
+
+    fun mOnClick(view: View){
+        when(view.id){
+            R.id.btnStart -> {
+                mAnimation!!.start()
+                ed!!.setText("걷고 있습니다.")
+            }
+            R.id.btnStop -> {
+                mAnimation!!.stop()
+                ed!!.setText("멈췄습니다.")
+            }
+        }
+    }
+
+}
+```
+
+- drawable쪽 frams.xml
+```xml
+<?xml version ="1.0" encoding="utf-8"?>
+<animation-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:oneshot="false">
+
+    <item android:drawable="@drawable/s2"
+        android:duration="200"/>
+    <item android:drawable="@drawable/s3"
+        android:duration="200"/>
+    <item android:drawable="@drawable/s7"
+        android:duration="200"/>
+    <item android:drawable="@drawable/sa"
+        android:duration="200"/>
+
+
+</animation-list>
+```
