--- a/7월 3주차/7월 18일.MD
+++ b/7월 3주차/7월 18일.MD
@@ -23,3 +23,23 @@ html
 레이아웃을 우리가 만들 수도 있지만, 주어진 레이아웃으로 대부분 작성할 수 있으므로 잘 익히도록 하자
 ```
 
+### LinearLayout
+- 박스모델, 한방향으로 배치
+- 놓여지는 순서대로 배치 - orientation
+- weight, baseline
+
+
+#### layout
+- weight 하면 1:1
+```xml
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#4358CD"
+        android:layout_weight="1">
+
+
+    </LinearLayout>
+```
+
