--- a/7월 3주차/7월 18일.MD
+++ b/7월 3주차/7월 18일.MD
@@ -43,3 +43,58 @@ html
     </LinearLayout>
 ```
 
+
+### 코틀린 view 동적 생성
+```kotlin
+package com.example.myapp25k
+
+import android.graphics.Color
+import android.graphics.Color.rgb
+import androidx.appcompat.app.AppCompatActivity
+import android.os.Bundle
+import android.view.Gravity
+import android.widget.Button
+import android.widget.LinearLayout
+import android.widget.TextView
+
+class MainActivity : AppCompatActivity() {
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContentView(R.layout.activity_main)
+
+        val linearLayout = LinearLayout (this)
+        linearLayout.orientation = LinearLayout.VERTICAL
+        linearLayout.gravity = Gravity.CENTER
+        linearLayout.setBackgroundColor(Color.GREEN)
+
+        val params1 = LinearLayout.LayoutParams(
+            LinearLayout.LayoutParams.WRAP_CONTENT,
+            LinearLayout.LayoutParams.WRAP_CONTENT
+        )
+
+        val params2 = LinearLayout.LayoutParams(
+            LinearLayout.LayoutParams.MATCH_PARENT,
+            LinearLayout.LayoutParams.WRAP_CONTENT
+        )
+
+        val btn = Button(this)
+        btn.text = "버튼"
+        btn.gravity = Gravity.CENTER
+        btn.setBackgroundColor(Color.rgb(100,150,200))
+        btn.layoutParams = params1
+        params1.bottomMargin = 100
+
+        val tv = TextView(this)
+        tv.text = "텍스트 뷰입니다. 보이나요?"
+        tv.gravity = Gravity.CENTER
+        tv.layoutParams = params2
+
+        linearLayout.addView(btn)
+        linearLayout.addView(tv)
+
+
+        setContentView(linearLayout)
+
+    }
+}
+```
