--- a/7월 3주차/7월 18일.MD
+++ b/7월 3주차/7월 18일.MD
@@ -23,10 +23,21 @@ html
 레이아웃을 우리가 만들 수도 있지만, 주어진 레이아웃으로 대부분 작성할 수 있으므로 잘 익히도록 하자
 ```
 
+
+
 ### LinearLayout
 - 박스모델, 한방향으로 배치
 - 놓여지는 순서대로 배치 - orientation
 - weight, baseline
+
+### 상대(Relative)레이아웃
+```
+부모에 배치시키기
+layout_alignParentLeft = "true"
+layout_alignParentTop = "true"
+```
+- 다른 위젯을 상대로 배치_ 상대 id를 기준으로 지정한다.
+
 
 
 #### layout
