--- a/7월 3주차/7월 18일.MD
+++ b/7월 3주차/7월 18일.MD
@@ -109,3 +109,84 @@ class MainActivity : AppCompatActivity() {
     }
 }
 ```
+
+
+### RelativeLayout 연습
+- android:layout_alignParentTop="true"
+- android:layout_alignParentLeft="true"
+- android:layout_above="@id/tv2"
+- android:layout_below="@id/tv1"
+- 등 연습
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/tv1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:background="#F44336"
+        android:text="기준1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        />
+
+    <TextView
+        android:id="@+id/tv2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:background="#F44336"
+        android:text="기준2"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        />
+
+    <TextView
+        android:id="@+id/tv3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:background="#57A2DD"
+        android:text="텍스트1"
+        android:layout_toRightOf="@id/tv1"
+        android:layout_above="@id/tv2"
+        />
+
+    <TextView
+        android:id="@+id/tv4"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:background="#57A2DD"
+        android:text="텍스트2"
+        android:layout_below="@id/tv1"
+        android:layout_alignParentRight="true"
+        />
+
+    <TextView
+        android:id="@+id/tv5"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:background="#57A2DD"
+        android:text="텍스트3"
+        android:layout_alignParentBottom="true"
+        />
+
+    <TextView
+        android:id="@+id/tv6"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:background="#57A2DD"
+        android:text="텍스트4"
+        android:layout_toLeftOf="@id/tv2"
+        android:layout_alignParentBottom="true"
+        
+        />
+</RelativeLayout>
+```
