--- a/7월 3주차/7월 18일.MD
+++ b/7월 3주차/7월 18일.MD
@@ -190,3 +190,37 @@ class MainActivity : AppCompatActivity() {
         />
 </RelativeLayout>
 ```
+
+### RelativeLinear 연습2
+```xml
+package com.example.myapp27k
+
+import android.graphics.Color.rgb
+import androidx.appcompat.app.AppCompatActivity
+import android.os.Bundle
+import android.widget.Button
+import android.widget.RelativeLayout
+
+class MainActivity : AppCompatActivity() {
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        //setContentView(R.layout.activity_main)
+
+        val params = RelativeLayout.LayoutParams(
+            RelativeLayout.LayoutParams.MATCH_PARENT,
+            RelativeLayout.LayoutParams.MATCH_PARENT
+        )
+
+        val layout = RelativeLayout(this)
+        val btn = Button(this)
+        btn.text = "버튼"
+        btn.setBackgroundColor(rgb(55,120,50))
+        btn.layoutParams = params
+        layout.addView(btn)
+
+        setContentView(layout)
+
+
+    }
+}
+```
