--- a/7월 3주차/7월 18일.MD
+++ b/7월 3주차/7월 18일.MD
@@ -25,18 +25,28 @@ html
 
 
 
-### LinearLayout
+## LinearLayout
 - 박스모델, 한방향으로 배치
 - 놓여지는 순서대로 배치 - orientation
 - weight, baseline
 
-### 상대(Relative)레이아웃
+## 상대(Relative)레이아웃
+- 다른 위젯을 상대로 배치_ 상대 id를 기준으로 지정한다.
 ```
 부모에 배치시키기
 layout_alignParentLeft = "true"
 layout_alignParentTop = "true"
 ```
-- 다른 위젯을 상대로 배치_ 상대 id를 기준으로 지정한다.
+
+## TableLayout
+- 테이블로 구성해서 구현
+- 속성
+```
+    layout_column="1" 놓여질 위치
+    layout_span="2" column span
+```
+
+
 
 
 
